--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "expo-calendar": "~12.2.1",
     "expo-status-bar": "~1.11.1",
     "i": "^0.3.7",
+    "install": "^0.13.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-<<<<<<< HEAD
-    "@react-native-async-storage/async-storage": "1.21.0"
-=======
-    "react-uuid": "^2.0.0"
->>>>>>> f1e4bd33225506e7f9f0b2e0399c0d663c99e12d
+    "react-native-uuid": "^2.0.2",
+    "react-uuid": "^2.0.0",
+    "uuid": "^9.0.1",
+    "expo-battery": "~7.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
